# miniscript

./: CMakeLists.txt  LICENSE  readme.md
examples/: arrays.ms  constants.ms  for_loop.ms  functions.ms  hello.ms  if_else.ms  match.ms  strings.ms  variables.ms  while_loops.ms
src/: main.cpp
src/miniscript/: ASTree.h  Environment.cpp  Environment.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Printer.cpp  Printer.h  STDLib.cpp  STDLib.h  Scope.cpp  Scope.h  Token.cpp  Token.h  Trie.cpp  Trie.h  Value.cpp  Value.h  Visitor.h  Word.cpp  Word.h
